# fun-thing

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.sh
src/: main.cpp
